@@ -117,7 +117,7 @@ int libfguid_identifier_copy_from_byte_stream(
      libfguid_identifier_t *identifier,
      const uint8_t *byte_stream,
      size_t byte_stream_size,
-     uint8_t byte_order,
+     int byte_order,
      libfguid_error_t **error );
 
 /* Retrieves the size of an UTF-8 encoded string of the identifier
